--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,6 +28,9 @@ jobs:
             distribution: "temurin"
             java-version: "21"
         
+        - name: Grant execute permission to mvnw
+          run: chmod +x mvnw
+
         - name: build jar file
           run:
             ./mvnw clean package
